--- a/collab.html
+++ b/collab.html
@@ -67,11 +67,11 @@
           />
         </div>
 
-        <div class="name">นาย พิษณุ ศิวพรพิทักษ์</div>
+        <div class="name">ญานิกา รักษาศรี</div>
 
-        <div class="student-id">67131764</div>
+        <div class="student-id">67156476</div>
 
-        <div class="quote">BUG ไม่มี บารมีไม่เกิด</div>
+        <div class="quote">Error เกิดทุกวัน</div>
       </div>
     </div>
   </body>
