--- a/collab.html
+++ b/collab.html
@@ -74,5 +74,20 @@
         <div class="quote">Error เกิดทุกวัน</div>
       </div>
     </div>
+
+    <!--prai-->
+    <div class="profile-gad">
+        <div class="profile-img">
+            <img src="https://media.discordapp.net/attachments/1049931963215118340/1415338645380005889/9399F558-811E-45E5-9994-18345248CECD.jpg?ex=68c2d854&is=68c186d4&hm=e6119430516915b92552db1e06fbfc9bf8dc9cba3f7d72eeecd0dfb5763ace4c&=&format=webp&width=642&height=856" >
+        </div>
+        
+        <h2 class="profile-name">67156678</h2>
+        <p class="profile-title">ปรายฟ้า สุขเกษม</p>
+        
+        <div class="profile-info">
+            <div class="info-item">
+                <span class="info-value">เลือดทุกหยดคือบทเรียน ความเจ็บทุกเส้นคือพลัง</span>
+            </div>
+        </div>
   </body>
 </html>
