67153060 ฐนิก ทรัพย์โนนหวาย

--- a/collab.html
+++ b/collab.html
@@ -43,13 +43,19 @@
 
       <!-- E -->
 
-      <div class="profile-card">
-        <div class="profile-image">
-          <img
-            src="/pic/jay.jpg"
-            alt="รูปโปรไฟล์"
-          />
+     <div class="profile-card2">
+        <div class="landscape-container">
+            <div class="cloud"></div>
+            <div class="hills">
+                <div class="hill-back"></div>
+                <div class="hill-front"></div>
+                <img src="po/borderline Human or Ai _20250910_201358_0000.jpg" alt="" width="200" height="">
+            </div>
         </div>
+        <div class="name-thai">ชื่อ ฐนิก ทรัพย์โนนหวาย</div>
+        <div class="student-id">67153060</div>
+        <div class="description">เป็นคนง่ายๆ หิวก็กิน ง่วงก็นอน โดนทักก็เงียบ</div>
+    </div>
 
         <div class="name">นาย พิษณุ ศิวพรพิทักษ์</div>
 
