--- a/collab.html
+++ b/collab.html
@@ -3,97 +3,68 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Collab</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Prompt:wght@300;400;600&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="collab.css" />
-    <title>collab</title>
   </head>
   <body>
     <div class="container">
       <!-- p -->
       <div class="profile-card">
         <div class="profile-image">
-          <img
-            src="/pic/jay.jpg"
-            alt="รูปโปรไฟล์"
-          />
+          <img src="/pic/jay.jpg" alt="รูปโปรไฟล์" />
         </div>
-
         <div class="name">นาย พิษณุ ศิวพรพิทักษ์</div>
-
         <div class="student-id">67131764</div>
-
         <div class="quote">BUG ไม่มี บารมีไม่เกิด</div>
       </div>
 
       <!-- J -->
-
-      <div class="profile-card">
-        <div class="profile-image">
-          <img
-            src="/pic/jay.jpg"
-            alt="รูปโปรไฟล์"
-          />
-        </div>
-
-        <div class="name">นายdddd เนย มุมิ</div>
-
-        <div class="student-id">67131764</div>
-
-        <div class="quote">BUG ไม่มี บารมีไม่เกิด</div>
-      </div>
-
-      <!-- E -->
-
-     <div class="profile-card2">
+      <div class="profile-card2">
         <div class="landscape-container">
-            <div class="cloud"></div>
-            <div class="hills">
-                <div class="hill-back"></div>
-                <div class="hill-front"></div>
-                <img src="po/borderline Human or Ai _20250910_201358_0000.jpg" alt="" width="200" height="">
-            </div>
+          <img
+            src="/pic/borderline Human or Ai _20250910_201358_0000.jpg"
+            alt="background"
+          />
         </div>
         <div class="name-thai">ชื่อ ฐนิก ทรัพย์โนนหวาย</div>
         <div class="student-id">67153060</div>
-        <div class="description">เป็นคนง่ายๆ หิวก็กิน ง่วงก็นอน โดนทักก็เงียบ</div>
-    </div>
-
-        <div class="name">นาย พิษณุ ศิวพรพิทักษ์</div>
-
-        <div class="student-id">67131764</div>
-
-        <div class="quote">BUG ไม่มี บารมีไม่เกิด</div>
+        <div class="description">
+          เป็นคนง่ายๆ หิวก็กิน ง่วงก็นอน โดนทักก็เงียบ
+        </div>
       </div>
 
       <!-- N -->
-      <div class="profile-card">
-        <div class="profile-image">
+      <div class="profile-cardx2">
+        <div class="profile-image2">
+          <img src="/pic/S__43851779.jpg" alt="รูปโปรไฟล์" />
+        </div>
+        <div class="name">ญานิกา รักษาศรี</div>
+        <div class="student-id">67156476</div>
+        <div class="quote2">Error เกิดทุกวัน</div>
+      </div>
+
+      <!-- prai -->
+      <div class="profile-gad">
+        <div class="profile-img">
           <img
-            src="/pic/jay.jpg"
-            alt="รูปโปรไฟล์"
+            src="/pic/542096228_1779527032927412_6819969964893106679_n.jpg"
+            alt="profile"
           />
         </div>
-
-        <div class="name">ญานิกา รักษาศรี</div>
-
-        <div class="student-id">67156476</div>
-
-        <div class="quote">Error เกิดทุกวัน</div>
-      </div>
-    </div>
-
-    <!--prai-->
-    <div class="profile-gad">
-        <div class="profile-img">
-            <img src="https://media.discordapp.net/attachments/1049931963215118340/1415338645380005889/9399F558-811E-45E5-9994-18345248CECD.jpg?ex=68c2d854&is=68c186d4&hm=e6119430516915b92552db1e06fbfc9bf8dc9cba3f7d72eeecd0dfb5763ace4c&=&format=webp&width=642&height=856" >
-        </div>
-        
         <h2 class="profile-name">67156678</h2>
         <p class="profile-title">ปรายฟ้า สุขเกษม</p>
-        
         <div class="profile-info">
-            <div class="info-item">
-                <span class="info-value">เลือดทุกหยดคือบทเรียน ความเจ็บทุกเส้นคือพลัง</span>
-            </div>
+          <div class="info-item">
+            <span class="info-value"
+              >เลือดทุกหยดคือบทเรียน ความเจ็บทุกเส้นคือพลัง</span
+            >
+          </div>
         </div>
+      </div>
+    </div>
   </body>
 </html>
